# rigorloom

./: CHANGELOG.md  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
adapters/claude-code/: SKILL.hwp-master.pointer.md  SKILL.report-pipeline.md  agent.humanizer.template.md
adapters/hancom-linux-sdk/: README.md
adapters/pantadex/: README.md
docs/: autonomous-orchestration.md  capability-matrix.md  gate-calibration.md  golden-path.md  humanization.md  lessons-learned.md  migration.md  pipeline-master-v0.6.md  report-method.md  skills-install.md  style-rules.md  trouble-table.md  troubleshooting.md
docs/plans/: p0-parity-report.md  v0.10-typeset-parity.md  v0.11-Z3.md  v0.11-Z4.md  v0.11-Z5.md  v0.11-blindspots.md  v0.12-entry-modes.md  v0.7-hardening.md  v0.9-hancom-free.md  v015-renderer-certification.md
docs/research/: linux-hwp-edit.md
examples/style/: layout-conventions.md
pipeline/references/: CONTRACT_v0.6.md  agents.yaml  aliases.yaml  backends.example.yaml  humanization_changes_v2.schema.json  humanization_contract.md  modules.yaml  personalization_contract.md  stages.yaml  wiki_entry_template.md  workspace_layout.json
pipeline/scripts/: backend_precheck.py  check_claims.py  check_corpus.py  check_figdata.py  check_layout.py  check_numbers.py  check_refs.py  check_saeteuk.py  check_sources.py  compose.py  (+25 more)
scripts/: bootstrap.py  new_report.py  setup_profile.py  sync_local.py  sync_manifest.example.yaml
studio/: README.md  index.html  main.py
tests/: test_bootstrap.py  test_check_saeteuk.py  test_studio.py  test_sync_local.py
(+64 files in other folders)
